platform/istio/manifests/mtls/peerauthentication-come2us.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: come2us-mtls
  namespace: come2us
spec:
  mtls:
    mode: STRICT
